# subsurface

./: README.md  settings.gradle
app/: CMakeLists.txt  build.gradle
app/assets/: opaque.fs  opaque.vs  prepass.fs  prepass.vs  resolve.fs  resolve.vs  scattering.fs  test.fs  text.vs  thickness.fs
app/jni/: app.cpp  app.h  main.cpp  matrix.h  meshloader.cpp  meshloader.h  shader.cpp  shader.h  timer.cpp
app/jni/common/: common.h  glutil.cpp  glutil.h  primitives.cpp  primitives.h  timer.h
app/src/androidTest/java/com/kamal/subsurface/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/com/kamal/subsurface/: MainActivity.java  NativeLibrary.java
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/kamal/subsurface/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
